# linuxdeploy

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  Readme_debain_arm.md
.github/workflows/: main.yml
ci/: build-in-docker.sh  build-static-binutils.sh  build-static-patchelf.sh  build.sh  test-coverage.sh
ci/docker/: Dockerfile  install-static-binutils.sh  install-static-patchelf.sh
cmake/Modules/: CodeCoverage.cmake  CommonGraph.cmake  CommonTarget.cmake  FindCImg.cmake  FindLibMagic.cmake  GitExternal.cmake  SubProject.cmake
cmake/toolchains/: aarch64-linux-gnu.cmake  armhf-linux-gnu.cmake  i386-linux-gnu.cmake
include/linuxdeploy/core/: appdir.h  desktopfile.h  elf.h  elf_file.h  log.h  util.h
include/linuxdeploy/core/desktopfile/: desktopfile.h  desktopfileentry.h  exceptions.h
include/linuxdeploy/log/: log.h
include/linuxdeploy/plugin/: base.h  base_impl.h  exceptions.h  plugin.h  plugin_process_handler.h
include/linuxdeploy/subprocess/: pipe_reader.h  process.h  subprocess.h  subprocess_result.h  util.h
include/linuxdeploy/util/: assert.h  misc.h  subprocess.h  util.h
lib/: CMakeLists.txt
resources/: linuxdeploy.desktop
src/: CMakeLists.txt  appdir_test_main.cpp  core.cpp  core.h  linuxdeploy.cpp  linuxdeploy.h  main.cpp  plugin_test_main.cpp
src/core/: CMakeLists.txt  appdir.cpp  appdir_root_setup.cpp  appdir_root_setup.h  apprun.sh  desktopfile.cpp  desktopfileentry.cpp  desktopfileentry.h  desktopfilereader.cpp  desktopfilereader.h  desktopfilewriter.cpp  desktopfilewriter.h  elf.cpp  elf_file.cpp  generate-excludelist.sh  log.cpp  main.cpp
src/core/copyright/: CMakeLists.txt  copyright.cpp  copyright.h  copyright_dpkgquery.cpp  copyright_dpkgquery.h
src/core/desktopfile/: CMakeLists.txt  desktopfile.cpp  desktopfileentry.cpp  desktopfilereader.cpp  desktopfilereader.h  desktopfilewriter.cpp  desktopfilewriter.h
src/log/: CMakeLists.txt  log.cpp
src/plugin/: CMakeLists.txt  plugin.cpp  plugin_process_handler.cpp  plugin_type0.cpp  plugin_type0.h
src/subprocess/: CMakeLists.txt  pipe_reader.cpp  process.cpp  subprocess.cpp  subprocess_demo.cpp  subprocess_result.cpp  util.cpp
src/util/: CMakeLists.txt  magicwrapper.cpp  magicwrapper.h  misc.h  subprocess.cpp  util.h
tests/: AppDirUnitTests.cpp  CMakeLists.txt  test_appdir.cpp
tests/core/: CMakeLists.txt  test_appdir.cpp  test_desktopfile.cpp  test_desktopfile_conformance.cpp  test_desktopfileentry.cpp  test_desktopfilereader.cpp  test_desktopfilewriter.cpp  test_elf_file.cpp  test_linuxdeploy.cpp  test_util.cpp  test_util.h
tests/core/desktopfile/: CMakeLists.txt  main.cpp  test_desktopfile.cpp  test_desktopfileentry.cpp  test_desktopfilereader.cpp  test_desktopfilewriter.cpp
tests/data/: simple_app.Desktop  simple_app.desktop
tests/scripts/: build_minimal_appimage_with_custom_apprun.sh
tests/simple_executable/: CMakeLists.txt  simple_executable.cpp
tests/simple_library/: CMakeLists.txt  simple_library.cpp  simple_library.h
travis/: Dockerfile.aarch64  Dockerfile.armhf  Dockerfile.centos6  Dockerfile.centos6-i386  Dockerfile.i386  Dockerfile.x86_64  build-centos6-docker.sh  build-centos6.sh  build-docker.sh  build-in-docker.sh  build-mostly-static-binutils.sh  build.sh  entrypoint.sh
