add_executable(simple_executable simple_executable.cpp)
target_link_libraries(simple_executable simple_library pthread)

add_executable(simple_executable_static simple_executable.cpp)
target_link_libraries(simple_executable_static simple_library_static pthread)
target_link_options(simple_executable_static PUBLIC -static -static-libgcc -static-libstdc++)
